--- a/pro-instagram-oauth/netlify.toml
+++ b/pro-instagram-oauth/netlify.toml
@@ -4,20 +4,6 @@
 
 [[redirects]]
   from = "/webhook"
-  to = "/.netlify/functions/webhook.js"
+  to = "/.netlify/functions/webhook"
   status = 200
-
-[[redirects]]
-  from = "/auth/callback"
-  to = "/.netlify/functions/auth-callback.js"
-  status = 200
-
-[[redirects]]
-  from = "/cancel"
-  to = "/.netlify/functions/cancel.js"
-  status = 200
-
-[[redirects]]
-  from = "/delete"
-  to = "/.netlify/functions/delete.js"
-  status = 200
+  force = true
